<resources>
    <!--App Wide Strings-->
    <string name="app_name">WaterWhere</string>
    <string name="action_settings">Settings</string>
    <string name="shared_pref_code">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY</string>
    <string name="shared_pref_loggedin">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.loggedin</string>
    <string name="shared_pref_email">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.email</string>
    <string name="shared_pref_name">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.name</string>
    <string name="shared_pref_pass">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.pass</string>
    <string name="shared_pref_address">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.address</string>
    <string name="shared_pref_phone">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.phone</string>
    <string name="shared_pref_type">com.gitatme.WaterWhere.SHARED_PREFERENCE_KEY.type</string>


    <!--OnboardingActivity-->
    <string name="forward_button_skip">SKIP</string>
    <string name="forward_button_join">JOIN</string>

    <!--LoginActivity-->
    <string name="login_textview">Login</string>
    <string name="login_edittext_email">Email</string>
    <string name="login_edittext_pass">Password</string>
    <string name="login_button_login">Sign In</string>
    <string name="login_button_cancel">Cancel</string>
    <string name="registration_textview">Registration</string>
    <string name="register_button_login">Sign Up</string>
    <string name="register_button_cancel">Cancel</string>
    <string name="register_edittext_email">Email</string>
    <string name="register_edittext_pass">Password</string>
    <string name="register_edittext_confirmpass">Confirm Password</string>
    <string name="register_edittext_name">Name</string>
    <string name="register_edittext_address">Home Address</string>
    <string name="register_edittext_type">Account Type</string>
    <string name="register_edittext_phone">Phone Number</string>
    <string name="register_textinputlayout_email_empty">Cannot leave email empty</string>
    <string name="register_textinputlayout_email_invalid">Not a valid email address</string>
    <string name="register_textinputlayout_pass_empty">Cannot leave pass empty</string>
    <string name="register_textinputlayout_pass_length">Must be at least 8 characters</string>
    <string name="register_textinputlayout_confirmpass_empty">Cannot leave email empty</string>
    <string name="register_textinputlayout_confirmpass_match">Does not match password</string>
    <string name="register_textinputlayout_name_empty">Cannot leave name empty</string>
    <string name="register_textinputlayout_address_empty">Cannot leave address empty</string>
    <string name="register_textinputlayout_phone_empty">Cannot leave phone number empty</string>
    <string name="register_textinputlayout_phone_invalid">Not a valid phone number</string>
    <string name="auth_failed"> Sorry </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MainActivity-->

    <!--ProfileActivity-->
    <string-array name="account_types">
        <item>User</item>
        <item>Worker</item>
        <item>Manager</item>
        <item>Admin</item>
    </string-array>

    <!--WaterReportActivity-->
    <string-array name="water_types">
        <item>Bottled</item>
        <item>Well</item>
        <item>Stream</item>
        <item>Lake</item>
        <item>Spring</item>
        <item>Other</item>
    </string-array>

    <string-array name="water_conditions">
        <item>Waste</item>
        <item>Treatable-Clear</item>
        <item>Treatable-Muddy</item>
        <item>Potable</item>
    </string-array>
    <string name="title_activity_water_report_view">WaterReportViewActivity</string>
    <string name="title_activity_view_water_report">ViewWaterReportActivity</string>
    <string name="textview">TextView</string>
    <string name="title_activity_water_availability">Water Availability</string>
</resources>
